# emerald

./: .gitignore  README.md
emerald/: Cargo.toml
emerald/benches/: vault_load.rs
emerald/src/: emerald.rs  error.rs  lib.rs
emerald/src/adapters/: adapters_to_btree.rs  adapters_to_content_type.rs  adapters_to_link_2_tgt.rs  adapters_to_link_src_2_tgt.rs  adapters_to_links.rs  adapters_to_name.rs  adapters_to_rid.rs  adapters_to_rid_and_content.rs  adapters_to_rid_and_content_type.rs  adapters_to_rid_and_document_metadata.rs  adapters_to_rid_and_filesystem_meta_data.rs  adapters_to_rid_and_filesystem_metadata.rs  adapters_to_rid_and_filetype.rs  adapters_to_rid_and_link_2_tgt.rs  adapters_to_rid_and_links.rs  adapters_to_rid_and_meta_data.rs  adapters_to_rid_and_name.rs  adapters_to_rid_and_yaml.rs  adapters_to_rids_and_content.rs  adapters_to_yaml.rs  mod.rs  trafo_to_link_src_2_tgt.rs  trafo_to_links.rs  trafo_to_resource_id.rs  trafo_to_resource_id_and_filetype.rs
emerald/src/content_analyzers/: content_type.rs  convert_to_link2tgt.rs  convert_to_link_2_tgt.rs  convert_to_link_src_2_tgt.rs  extract_content_types.rs  extract_links.rs  link_extractor.rs  link_extractor_iter_src.rs  md_extractor.rs  md_extractor_iter_src.rs  md_link_analyzer.rs  md_link_analyzer_iter_source.rs  md_link_analyzer_iter_src.rs  md_link_analyzer_iterable.rs  mod.rs  resource_id_extractor.rs  resource_id_extractor_iter_src.rs
emerald/src/data_model/: default_data_model.rs  mod.rs  tgt_iter_retriever.rs
emerald/src/indexes/: all_endpoints_iter_source.rs  all_endpoints_iterable.rs  all_note_links_iter_source.rs  all_note_links_iterable.rs  all_resource_ids_iter_source.rs  all_resource_ids_iterable.rs  backlink_index.rs  endpoint_index.rs  endpoints_iterable.rs  link_from_source_to_target_iterable.rs  md_resource_ids_iter_source.rs  md_resource_ids_iterable.rs  mod.rs  note_link_index.rs  resource_id_converter.rs  (+8 more)
emerald/tests/: integration_test.rs
emld/: Cargo.toml  mdtest.md
emld/src/: expr_parser.rs  format_option_parser.rs  main.rs  note_table_printer.rs  print_table.rs
(+411 files in other folders)
