[package]
name = "emerald"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_warn"] }
thiserror = "1.0.47"
unicode-normalization = "0.1.22"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
mockall = "0.11.4"

[[bench]]
name = "vault_load"
harness = false